Fixed layout bugs

--- a/src/main/less/vcomet/ui/vc-layout/vc-layout.less
+++ b/src/main/less/vcomet/ui/vc-layout/vc-layout.less
@@ -1,54 +1,79 @@
-
 @element: vc-layout;
 
 @{element}[theme="noire"] {
-  .@{element}-columnContainer{
+  &.@{element}-columnContainer{
     display: flex;
     flex-direction: column; 
   }
-  .@{element}-rowContainer{
+  &.@{element}-rowContainer{
     display: flex;
     flex-direction: row; 
   }
   /*
-    Items wrapping
+    Children wrapping
    */
-  .@{element}-wrap{
+  &.@{element}-wrap{
     flex-wrap: wrap;
   }
-  .@{element}-wrapReverse{
+  &.@{element}-wrapReverse{
     flex-wrap: wrap-reverse;
   }
-  .@{element}-nowrap{
+  &.@{element}-nowrap{
     flex-wrap: nowrap;
   }
   /*
-    Items horizontal alignment and spacing
+    Children horizontal alignment and spacing
    */
-  .@{element}-justifiedSstart{
-    align-items: start;
+  &.@{element}-justifiedStart{
+    justify-content: flex-start;
   }
-  .@{element}-justifiedEnd{
-    align-items: end;
+  &.@{element}-justifiedEnd{
+    justify-content: flex-end;
   }
-  .@{element}-justifiedCenter{
+  &.@{element}-justifiedCenter{
+    justify-content: center;
+  }
+  &.@{element}-justifiedSpaceBetween{
+    justify-content: center;
+  }
+  &.@{element}-justifiedSpaceAround{
+    justify-content: center;
+  }
+  /*
+    Children vertical alignment and spacing
+   */
+  &.@{element}-alignStart{
+    align-items: flex-start;
+  }
+  &.@{element}-alignEnd{
+    align-items: flex-end;
+  }
+  &.@{element}-alignCenter{
     align-items: center;
   }
 
   /*
-   **This should be on item css file
-   Items vertical align
+    Items horizontal alignment and spacing
    */
-  .@{element}-alignStart{
+  & > vc-item.vc-layout-justifiedStart {
+    justify-self: flex-start;
+  }
+  & > vc-item.vc-layout-justifiedEnd {
+    justify-self: flex-end;
+  }
+  & > vc-item.vc-layout-justifiedCenter {
+    justify-self: center;
+  }
+  /*
+    Items vertical alignment and spacing
+   */
+  & > vc-item.vc-layout-alignStart {
     align-self: flex-start;
   }
-  .@{element}-alignEnd{
+  & > vc-item.vc-layout-alignEnd{
     align-self: flex-end;
   }
-  .@{element}-alignCenter{
+  & > vc-item.vc-layout-alignCenter{
     align-self: center;
-  }
-  .@{element}-alignStretch{
-    align-self: stretch;
   }
 }
