--- a/src/main/vcomet/ui/vc-gutterflex/vc-gutterflex.css
+++ b/src/main/vcomet/ui/vc-gutterflex/vc-gutterflex.css
@@ -9,6 +9,9 @@ vc-gutterflex[theme="noire"] {
   width: 100%;
   height: 100%;
 }
+vc-gutterflex[theme="noire"].vc-gutterflex-vertical {
+  flex-direction: column;
+}
 vc-gutterflex[theme="noire"] .vc-gutterflex-section {
   position: relative;
   display: flex;
@@ -20,12 +23,20 @@ vc-gutterflex[theme="noire"] .vc-gutterflex-section {
   min-height: 0;
   min-width: 0;
 }
+vc-gutterflex[theme="noire"].vc-gutterflex-vertical > .vc-gutterflex-section {
+  top: 0;
+  width: 100%;
+  height: initial;
+}
 vc-gutterflex[theme="noire"] .vc-gutterflex-splitter {
   position: relative;
   height: 100%;
   cursor: col-resize;
   text-align: center;
   z-index: 1;
+}
+vc-gutterflex[theme="noire"].vc-gutterflex-vertical > .vc-gutterflex-splitter {
+  width: 100%;
 }
 vc-gutterflex[theme="noire"] .vc-gutterflex-secondary {
   flex-grow: 1;
@@ -48,9 +59,20 @@ vc-gutterflex[theme="noire"] .vc-gutterflex-splitterClickable {
   border-radius: 25px;
   transition: background-color 0.2s;
 }
+vc-gutterflex[theme="noire"].vc-gutterflex-vertical > .vc-gutterflex-splitter > .vc-gutterflex-splitterClickable {
+  top: 0;
+  left: 50%;
+  width: 35px;
+  height: 100%;
+  margin-top: 0;
+  margin-left: -17px;
+}
 vc-gutterflex[theme="noire"] .vc-gutterflex-splitterCollapseIcon {
   padding-top: 0px;
   font-size: 11px;
   align-items: center;
   transition: color 0.2s;
+}
+vc-gutterflex[theme="noire"].vc-gutterflex-vertical > .vc-gutterflex-splitter .vc-gutterflex-splitterCollapseIcon {
+  padding-top: 1px;
 }
